# clipsync

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_UPDATE.md  FIXES_SUMMARY.md  INSTALL.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SANDBOX.md  SECURITY_FIXES.md  SETUP_NOTES.md  SIMPLE_AUTH_PROPOSAL.md  build.rs  install_user.sh  justfile  remove_claude_coauthor.sh  test_arch_install.sh  test_daemon.sh  test_install.sh  transport_test.rs
.github/: dependabot.yml
.github/workflows/: DISABLED.md  build.yml  build.yml.disabled  ci.yml  ci.yml.disabled  release.yml  release.yml.disabled  security.yml.disabled  test.yml  test.yml.disabled
ai_docs/: BUILD_STABILIZATION_PLAN.md  ClipSync_Spec.md
ai_docs/archive/: AGENT1_AUTH_HANDOFF.md  AGENT2_TRANSPORT_COMPLETION.md  BUILD_STATUS.md  FIXES_SUMMARY.md  INSTALL.md  SPRINT3_COMPLETION_REPORT.md
ai_docs/openssh/: IMPLEMENTATION_GUIDE.md  OPENSSH_FORMAT_SPEC.md  OPENSSH_SUPPORT_PLAN.md
ai_docs/task/: 01_project_scaffolding.md  02_rust_setup.md  03_build_system.md  04_config_module.md  05_clipboard_abstraction.md  06_history_database.md  07_ssh_authentication.md  08_websocket_transport.md  09_service_discovery.md  10_sync_engine.md  11_cli_interface.md  12_hotkey_support.md  13_testing_suite.md  14_packaging_distribution.md
benches/: encryption_bench.rs  sync_bench.rs
docs/: CONFIG.md  HOMEBREW_SETUP.md  INSTALL.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  SECURITY.md  SSH_KEY_FORMATS.md  TROUBLESHOOTING.md  USER_GUIDE.md  USER_INSTALL.md
docs/proposals/: SIMPLIFIED_AUTH_README.md
examples/: auth_demo.rs  auth_integration.rs  clipboard_demo.rs  generate_config.rs  simple_auth_demo.rs  test_openssh_keys.rs  verify_integration.rs
homebrew/: clipsync.rb
pkg/aur/: .SRCINFO  PKGBUILD
pkg/debian/: clipsync.service  control  postinst  prerm
pkg/homebrew/: clipsync.rb
pkg/macos/: Info.plist  (+2 more)
scripts/: README.md  apparmor-profile  benchmark.sh  check-status.sh  clipsync.service  com.clipsync.plist  cross-compile.sh  install-apparmor.sh  install.sh  pre-commit-checks.sh  quick-build-test.sh  release.sh  safe-dev.sh  setup-arch.sh  setup-macos.sh  setup-nspawn-container.sh  setup-sandbox-user.sh  setup.sh  test-local.sh  uninstall_user.sh
src/: adapters.rs  daemon.rs  lib.rs  main.rs  progress.rs  setup.rs
tests/: auth_integration.rs  basic_functionality.rs  build_test.rs  cli_integration.rs  discovery_integration.rs  end_to_end.rs  history_integration.rs  hotkey_integration.rs  integration_test.rs  performance_test.rs  sync_integration.rs  transport_test.rs  trust_integration_test.rs
(+73 files in other folders)
