[package]
name = "clipsync"
version = "0.1.0"
edition = "2021"
authors = ["ClipSync Team"]
description = "Cross-platform clipboard synchronization service"
license = "MIT OR Apache-2.0"
repository = "https://github.com/clipsync/clipsync"
keywords = ["clipboard", "sync", "cross-platform", "macos", "linux"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"

# Clipboard access
arboard = "3.5"

# Networking
tokio-tungstenite = "0.26"
ssh2 = "0.9"
bytes = "1.10"
futures-util = "0.3"

# Database
rusqlite = { version = "0.36", features = ["bundled-sqlcipher"] }

# Encryption & Security
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1.8"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
base64 = "0.22"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Service discovery
mdns-sd = "0.10"
if-addrs = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
global-hotkey = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Compression
zstd = "0.13"

# Path handling
dirs = "5.0"
directories = "5.0"
shellexpand = "3.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
gethostname = "1.0"
md5 = "0.7"
libc = "0.2"

# Platform-specific clipboard dependencies
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
objc_id = "0.1"
core-foundation = "0.10"
core-graphics = "0.23"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11-clipboard = "0.9"
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
wayland-client = "0.31"
wayland-protocols = "0.31"
wayland-protocols-wlr = "0.2"
nix = { version = "0.29", features = ["poll", "process", "signal", "user", "fs"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.20"
mockall = "0.13"
tokio-test = "0.4"
proptest = "1.5"
rstest = "0.25"
pretty_assertions = "1.4"

[features]
default = []
integration-tests = []
cargo-clippy = []

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[[bin]]
name = "clipsync"
path = "src/main.rs"

[lib]
name = "clipsync"
path = "src/lib.rs"

# Benchmarks removed temporarily